syntax = "proto3";

package sphinx.coininfo.v1;

option go_package = "github.com/NpoolPlatform/message/npool/coininfo";

import "google/api/annotations.proto";
import "npool/sphinxplugin/sphinxplugin.proto";

// CoinInfo服务
service SphinxCoininfo {
	// 注册新币种
	rpc RegisterCoin (RegisterCoinRequest) returns (CoinInfoRow){
		option (google.api.http) = {
			post: "/v1/coin/register"
			body: "*"
		};
	}
	// 获取币种信息
	rpc GetCoinInfos (GetCoinInfosRequest) returns (GetCoinInfosResponse){
		option (google.api.http) = {
			get: "/v1/coin/infos"
		};
	}
	// 获取单个币种
	rpc GetCoinInfo (GetCoinInfoRequest) returns (CoinInfoRow) {
		option (google.api.http) = {
			get: "/v1/coin/single"
		};}
	// 设置币种是否预售
	rpc SetCoinPresale (SetCoinPresaleRequest) returns (CoinInfoRow) {
		option (google.api.http) = {
			post: "/v1/coin/presale"
			body: "*"
		};}
}

// 获取单个币种
message GetCoinInfoRequest {
	sphinx.plugin.v1.CoinType CoinType = 1;
	int32 CoinTypeID = 2; // coininfo内部调用，在每一请求中应与CoinType同步
}

// 获取币种请求
message GetCoinInfosRequest {}

// 注册币种信息
message RegisterCoinRequest {
	sphinx.plugin.v1.CoinType CoinType = 1; // sphinxplugin.CoinType
	string Name = 2; // 币种名称：Filecoin
	string Unit = 3; // 单位：FIL
}

// 数据库内CoinInfo
message CoinInfoRow {
	sphinx.plugin.v1.CoinType CoinType = 1;
	int32 CoinTypeID = 2; // coininfo内部调用，在每一请求中应与CoinType同步
	bool IsPresale = 3; // 是否为预售，false为在售商品
	string Name = 4; // 币种名称：Filecoin
	string Unit = 5; // 单位：FIL
}

// 所有币种信息
message GetCoinInfosResponse {
	repeated CoinInfoRow infos = 1; // array
}

// 设置预售请求
message SetCoinPresaleRequest {
	sphinx.plugin.v1.CoinType CoinType = 1; // sphinxplugin.CoinType
	int32 CoinTypeID = 2; // coininfo内部调用，在每一请求中应与CoinType同步
	bool IsPresale = 3; // 是否为预售，false为在售商品
}
